--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,7 +17,7 @@ jobs:
         env:
           SSH_PRIVATE_KEY: ${{ secrets.AZURE_SSH_PRIVATE_KEY }}
         run: |
-          echo "$SSH_PRIVATE_KEY" > private_key
+          echo "$SSH_PRIVATE_KEY" | tr -d '\r' > private_key
           chmod 600 private_key
 
       - name: Copy Files to Azure VM
